<resources>
    <string name="app_name">Cricket Panchayat</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_add">Add</string>
    <string name="title_settings">Settings</string>
    <string name="title_more">More</string>
    <string name="title_video">Video</string>
    <string name="title_profile">User Details</string>

    <string name="lblArticleAuthorBy">by</string>
    <string name="lblLatestArticle">Latest Article</string>
    <string name="lblMostViewed">Most Viewed</string>
    <string name="lblAudioArticle">Audio Article</string>
    <string name="lblSearchArticle">Search Article</string>
    <string name="lblOk">OK</string>
    <string name="loading">Loading</string>
    <string name="internet_error">Please check your internet connection.</string>
    <string name="api_timeout_error">Something went wrong.</string>
    <string name="no_data">Sorry !!! No Category Data Found</string>
    <string name="title_language">Language</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
