<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_tab_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_tab_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_tab_more"
        android:title="@string/title_more" />

</menu>
