<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:tabMode="scrollable"
        app:tabBackground="@android:color/transparent"
        app:tabTextColor="@color/white_32alpha"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabRippleColor="@color/app_background_color_32alpha"
        app:tabGravity="fill"
        android:background="@color/app_background_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/dp_0"
        app:cardElevation="@dimen/dp_5"
        app:cardBackgroundColor="@color/white"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="@dimen/dp_10">

            <Button
                android:id="@+id/btnLatestArticle"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:background="@drawable/home_rounded_button_selector"
                android:textColor="@color/white"
                android:text="@string/lblLatestArticle"
                android:textAllCaps="false"/>

            <androidx.legacy.widget.Space
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"/>

            <Button
                android:id="@+id/btnMostViewed"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:background="@drawable/home_rounded_button_selector"
                android:textColor="@color/white"
                android:text="@string/lblMostViewed"
                android:textAllCaps="false"/>

            <androidx.legacy.widget.Space
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"/>

            <Button
                android:id="@+id/btnAudioArticle"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:background="@drawable/home_rounded_button_selector"
                android:textColor="@color/white"
                android:text="@string/lblAudioArticle"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/no_data"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feedsList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>